some docs and renaming